adjusted home page layout issues

--- a/elementary-app/src/assets/css/homePage.css
+++ b/elementary-app/src/assets/css/homePage.css
@@ -98,11 +98,9 @@ body {
     width: 100%; 
     grid-template-rows: 1fr 3fr; 
     text-align: left; 
-    padding-left: 200px;
     margin: 40px;
     margin-bottom: 20px;
     padding-top: 30px;
-    width: 1200px;
     height: 350px;
 }
 
@@ -115,7 +113,6 @@ body {
     font-size: 32px;
     color: black;
     font-weight: 500;
-
     padding-bottom: 20px;
 }
 .elements-inner-text2{
@@ -130,8 +127,7 @@ body {
     display: grid;
     grid-template-rows: repeat(2, auto); 
     grid-template-columns: repeat(4, 265px);
-    width: 100%;
-    max-width: 1400px;
+    max-width: 100%;
     margin: 50px auto;
     align-items: center;
 }
@@ -141,7 +137,7 @@ body {
     grid-template-rows: repeat(2, auto); 
     grid-template-columns: repeat(4, 265px);
     width: 100%;
-    max-width: 1400px;
+    max-width: 100%;
     margin: 50px auto;
     align-items: center;
 }
@@ -177,13 +173,15 @@ body {
     font-weight: 500;
 }
 .see-more-text{
-    text-align: right;
-    padding-right: 100px;
-    margin: 50px;
-    margin-top: -70px;
+    grid-template-rows: 1fr;
+    display: grid;
     font-family: 'Nunito', sans-serif;    
     font-size: large;
     color: gray;
+    text-align: right;
+    justify-content: right;
+    margin-right: 100px;
+    width: 100%;
     
 }
 .see-more-text:hover{
